--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,34 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="secondary">
     <ion-title>
-      Ionic Blank
+      Digit Recognizer
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-sm">
+        <h3>Draw Here</h3>
+        <div class="wrapper">
+          <canvas drawable (newImage)="predict($event)"></canvas>
+          <br>
+        </div>
+
+        <button ion-button (click)="eraseButton()">Erase</button>
+
+      </div>
+      <div class="col-sm">
+        <h3>TensorFlow Prediction</h3>
+        <chart [data]="prediction"></chart>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+
+  <h5 color="red">*IF ON A SLOW CONNECTION, WAIT!!!</h5>
+
 </ion-content>
